--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2023.5.7
 charset-normalizer==3.1.0
 filelock==3.12.0
+gensim==4.3.2
 idna==3.4
 Jinja2==3.1.2
 joblib==1.2.0
@@ -8,12 +9,14 @@ MarkupSafe==2.1.2
 mpmath==1.3.0
 networkx==3.1
 numpy==1.24.3
+openai==0.27.9
 psutil==5.9.5
 pyparsing==3.0.9
 requests==2.31.0
 scikit-learn==1.2.2
 scipy==1.10.1
 sympy==1.12
+tenacity==8.2.3
 threadpoolctl==3.1.0
 torch==2.0.1
 torch-geometric==2.3.1
